syntax="proto3";

option java_multiple_files = true;
option java_package = "com.bigdata.rpc.grpc.api.greeting";
option java_outer_classname = "GreetingProto";
option objc_class_prefix = "HuHao";

package com.bigdata.rpc.grpc.api;

service Greeting{
    rpc SayHello(GreetingRequest) returns (GreetingResponse) {}
}

message GreetingRequest {
    string name = 1;
}

message GreetingResponse{
    string msg = 1;
}